--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.test.TestQuestionActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -18,9 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.sm_linguiz.QuestionActivity"></activity>
-        <activity android:name="com.example.sm_linguiz.ui.learn.LearnQuestionActivity" />
-        <activity android:name="com.example.sm_linguiz.LevelSelect" />
+        <activity android:name=".QuestionActivity" />
+        <activity android:name=".ui.learn.LearnQuestionActivity" />
+        <activity android:name=".LevelSelect" />
     </application>
 
 </manifest>
