--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.test.TestQuestionActivity"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".QuestionActivity" />
+        <activity android:name=".ui.QuestionActivity" />
         <activity android:name=".ui.learn.LearnQuestionActivity" />
-        <activity android:name=".LevelSelect" />
+        <activity android:name=".ui.LevelSelect" />
     </application>
 
 </manifest>
