--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.test.TestQuestionActivity"></activity>
+        <activity android:name=".ui.TestResultActivity"></activity>
+        <activity android:name=".ui.test.TestQuestionActivity" />
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name">
